info_TEXINFOS = DevIL_manual.texi

EXTRA_DIST  = images/DevIL.png  images/devil_msvc_include.png  images/devil_msvc_lib.png
EXTRA_DIST += images/DevIL.eps  images/devil_msvc_include.eps  images/devil_msvc_lib.eps
EXTRA_DIST += images/sample_alienified.eps images/sample_blur_average.eps images/sample_blur_gauss.eps images/sample_contrast_-05.eps images/sample_contrast_02.eps images/sample_contrast_16.eps images/sample_equalized.eps images/sample_original.eps
EXTRA_DIST += images/sample_alienified.png images/sample_blur_average.png images/sample_blur_gauss.png images/sample_contrast_-05.png images/sample_contrast_02.png images/sample_contrast_16.png images/sample_equalized.png images/sample_original.png
